feat : air quality sensor simulator (#174)
