# simulators/sensor-simulator/src/controller/simController.ts
@@ -3,7 +3,11 @@ import type { Simulator } from '../services/simulatorService.js';
 
 export const start = async (simulator: Simulator, req: Request, res: Response) => {
     try {
-        simulator.startOrAdd({ buildingId: req.body.buildingId, roomIds: req.body.roomIds, targetUrl: req.body.targetUrl });
+        simulator.startOrAdd({
+            buildingId: req.body.buildingId,
+            roomIds: req.body.roomIds,
+            targetUrl: req.body.targetUrl,
+        });
         res.status(200).json({ message: `Simulator started for ${req.body.buildingId}` });
     } catch (error: any) {
         res.status(400).json({ error: error.message });
@@ -13,7 +17,7 @@ export const start = async (simulator: Simulator, req: Request, res: Response) =
 export const stop = async (simulator: Simulator, req: Request, res: Response) => {
     try {
         simulator.stop(req.body.buildingId);
-        res.status(200).json({ message: 'Simulator stopped' });
+        res.status(200).json({ message: `Simulator stopped for ${req.body.buildingId}` });
     } catch (error: any) {
         res.status(400).json({ error: error.message });
     }
@@ -22,7 +26,7 @@ export const stop = async (simulator: Simulator, req: Request, res: Response) =>
 export const isRunning = async (simulator: Simulator, req: Request, res: Response) => {
     try {
         if (!req.query.buildingId) {
-            return res.status(200).json({ isRunning: false });
+            return res.status(200).json({ isRunning: simulator.getIsRunningAny() });
         }
         const running = simulator.getIsRunning(req.query.buildingId as string);
         res.status(200).json({ isRunning: running });
